--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
             - index.html
             - src
             - public
+            - .elasticbeanstalk
 
   build:
     executor: node-executor
