--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ dist-ssr
 *.sw?
 
 # Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+- .elasticbeanstalk/*
+- !.elasticbeanstalk/*.cfg.yml
+- !.elasticbeanstalk/*.global.yml
++ .elasticbeanstalk/*
++ !.elasticbeanstalk/*.cfg.yml
