--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
             - src
             - public
             - .elasticbeanstalk
+            - server.cjs
 
   build:
     executor: node-executor
