--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,5 @@ dist-ssr
 *.sw?
 
 # Elastic Beanstalk Files
-- .elasticbeanstalk/*
-- !.elasticbeanstalk/*.cfg.yml
-- !.elasticbeanstalk/*.global.yml
-+ .elasticbeanstalk/*
-+ !.elasticbeanstalk/*.cfg.yml
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
