--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - checkout
       - run:
           name: Install dependencies
-          command: npm install --include=dev
+          command: npm install
       - persist_to_workspace:
           root: .
           paths:
