--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           command: npm run build  
       - run:
           name: list files in build
-          command: ls -la build/
+          command: ls -la dists/
       - persist_to_workspace:
           root: .
           paths:
